# digao-systems

./: .gitignore  README.md  documento_cloud_gaming.md  documento_cloud_gaming_tecnico.md  documento_obsidian_self_hosted_vault.md  documento_prod_online_minimo_digao_oauth.md  pom.xml
.github/workflows/: cloud-gaming.yml  dev-readiness.yml  network-baseline.yml  obsidian-vault.yml  pulumi-digao-oauth-portal.yml  pulumi-grafana.yml  pulumi-keycloak.yml  pulumi-nginx-proxy-manager.yml  pulumi-oauth2-proxy.yml  pulumi-portainer.yml  pulumi-prometheus.yml  pulumi-rabbitmq.yml  pulumi-redis.yml  pulumi-services.yml
deploy/cloud-gaming/: README.md  docker-compose.yml
deploy/network/: DEV_READINESS.md  README.md
deploy/obsidian-vault/: .env.example  .gitignore  README.md  docker-compose.yml
docs/infra/: dev-admin-sso-runbook.md  monitoring-and-edge.md  sso-observability-target.md
pulumi/: .gitignore  README.md
pulumi/auth-service/: Pulumi.dev.yaml  Pulumi.homolog.yaml  Pulumi.prod.yaml  Pulumi.yaml  __main__.py
pulumi/digao-oauth-portal/: Pulumi.dev.yaml  Pulumi.homolog.yaml  Pulumi.prod.yaml  Pulumi.yaml  __main__.py
services/cpp/cloud-gaming-motor/: CMakeLists.txt  Dockerfile  README.md
services/cpp/cloud-gaming-motor/include/digao/motor/: capture.hpp  config.hpp  encoder.hpp  frame.hpp  motor_service.hpp  publisher.hpp
services/cpp/cloud-gaming-motor/src/: config.cpp  main.cpp  mock_capture.cpp  mock_encoder.cpp  motor_service.cpp  unix_publisher.cpp
services/cpp/cloud-gaming-motor/tests/: motor_config_test.cpp
shared-kernel/: pom.xml
(+257 files in other folders)
